added image directory

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 </h3>   
             </div>
-            <img id="homePicture" src="Selfie.jpg" alt="">
+            <img id="homePicture" src="images/Selfie.jpg" alt="">
         </section>
         <section>
             <p>
