--- a/about.html
+++ b/about.html
@@ -25,17 +25,17 @@
         </section>
         <section class="aboutSections">
             <h3>YoungLife</h3>
-            <img src="YL.jpg" alt="">
+            <img src="images/YL.jpg" alt="">
             <p class="segments">For four years, I have been a volunteer leader with YoungLife, a christian outreach ministry.<br> In my time there, I have enjoyed mentoring and walking with highschool students as they celebrate<br> achievements, as well as lifting them up when experiencing hardships in life.</P>
         </section>
         <section class="aboutSections">
             <h3>Exercise</h3>
-            <img src="basketball.jpg" alt="">
+            <img src="images/basketball.jpg" alt="">
             <P class="segments">Most days of the week I find time to get a couple hours in at the gym. Whether lifting weights or <br>playing pickup basketball, I love spending time with my firends and getting in some exercise.</P>
         </section>
         <section class="aboutSections">
             <h3>Sports</h3>
-            <img src="Sports.jpg" alt="">
+            <img src="images/Sports.jpg" alt="">
             <P class="segments">When im not working or going to the gym, I spend time watching my favorite sports. Football is my <br>number one choice. When football isn't on, watching the Nuggets or Avalanche play is an excellent passtime.</P>
         </section>
     </main>
