--- a/portfolio.html
+++ b/portfolio.html
@@ -6,35 +6,39 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div id="logo">
-            <h1>mark spriggs</h1>
+            <h1>Mark Spriggs</h1>
         </div>
             
         <div id="links">
             <a class="button" href="index.html">Home</a>
             <a class="button" href="about.html">About</a>
-            <a class="button" href="portfolio.html">Portfolio</a>
+            <a class="button" id="selectedButton" href="portfolio.html">Portfolio</a>
+            <a class="button" href="contact.html">Contact</a>
         </div>
     </nav>
     <main>
         <header>
             <h2 id="portHeader">Projects I have built</h2>
         </header>
-        <section>
-            <div>
+        <section class="Projects">
+            <div class="projectBits">
                 <h3>First Project</h3>
-                    <P class="segments">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor, lacus tempus laoreet eleifend, eros massa venenatis augue, non bibendum tellus ante et tellus. Nam et magna nec orci sollicitudin dignissim. Ut at tortor vitae ligula consectetur cursus. Fusce finibus neque eu diam iaculis, quis efficitur leo consectetur.</P>
+                    <p class="segments">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor, lacus tempus laoreet eleifend, eros massa venenatis augue, non bibendum tellus ante et tellus. Nam et magna nec orci sollicitudin dignissim. Ut at tortor vitae ligula consectetur cursus. Fusce finibus neque eu diam iaculis, quis efficitur leo consectetur.</p>
             </div>
-            <div>
+            <div class="projectBits">
                 <h3>Second Project</h3>
-                    <P class="segments">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor, lacus tempus laoreet eleifend, eros massa venenatis augue, non bibendum tellus ante et tellus. Nam et magna nec orci sollicitudin dignissim. Ut at tortor vitae ligula consectetur cursus. Fusce finibus neque eu diam iaculis, quis efficitur leo consectetur.</P>
+                    <p class="segments">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor, lacus tempus laoreet eleifend, eros massa venenatis augue, non bibendum tellus ante et tellus. Nam et magna nec orci sollicitudin dignissim. Ut at tortor vitae ligula consectetur cursus. Fusce finibus neque eu diam iaculis, quis efficitur leo consectetur.</p>
             </div>
-            <div>
+            <div class="projectBits">
                 <h3>Third Project</h3>
-                    <P class="segments">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor, lacus tempus laoreet eleifend, eros massa venenatis augue, non bibendum tellus ante et tellus. Nam et magna nec orci sollicitudin dignissim. Ut at tortor vitae ligula consectetur cursus. Fusce finibus neque eu diam iaculis, quis efficitur leo consectetur.</P>
+                    <p class="segments">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor, lacus tempus laoreet eleifend, eros massa venenatis augue, non bibendum tellus ante et tellus. Nam et magna nec orci sollicitudin dignissim. Ut at tortor vitae ligula consectetur cursus. Fusce finibus neque eu diam iaculis, quis efficitur leo consectetur.</p>
             </div>
         </section>
     </main>
